### libmp4tag Change Log

**1.0.2 alpha 2023-8---**

* Bug Fixes
    * fixed genre tags.
    * validate file type
* Notes
    * tags cannot be written

**1.0.1 alpha 2023-8-17**

* Changes
    * implemented set-tag, delete-tag, clean
    * updated cli tool.
* Notes
    * tags cannot be written

**1.0.0 alpha 2023-8-17**

* Notes
   initial release
    tags cannot be written