@@ -28,7 +28,6 @@ Current Status:
   against video files.
 
   To Do:
-    - updating tags: update tags in-place when there is available space.
     - updating tags: update tags when there is not enough space.
 
 Notes:
