@@ -5,8 +5,12 @@
 * Bug Fixes
     * fixed genre tags.
     * validate file type
+    * mp4tagcli: implement set of binary data.
+    * return error codes.
+* Changes
+    * can now write tags in-place if there is enough space.
 * Notes
-    * tags cannot be written
+    * tags cannot be written when there is not enough space.
 
 **1.0.1 alpha 2023-8-17**
 
